--- a/_config.yml
+++ b/_config.yml
@@ -13,21 +13,23 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Anastasya Shilova
-email: "anastasyashilova@gmail.com"
+title: Gustavo Lima
+email: "gustavo.alvares.lima@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
-  A Bootstrap 4 start up project for Jekyll and Github Pages
+  X-ray Crystallographer
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
-repository: "Anastasya-Shilova.github.io"
+repository: "https://github.com/gustalima"
 
 # Build settings
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+
+encoding: utf-8
 
 # A list of the pages to display in the navigation bar
 header_pages:
